5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4191/executions/1716_2499.log
== SUBMITION (2019-05-09 16:49:08) 
-- CODE:
x=80
print(x)
-- EXECUTION TIME:
0.315239
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
80
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
80
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
80
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:49:09) 
-- CODE:
x=80
print(x)
-- OUTPUT:
80
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:07:59) 
-- CODE:
x=80
print(x)
-- OUTPUT:
80
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:08:01) 
-- CODE:
x=80
print(x)
-- EXECUTION TIME:
0.366181
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
80
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
80
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
80
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:08:01) 
-- CODE:
x=80
print(x)
-- OUTPUT:
80
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:14:37) 
-- CODE:
from math import factorial
k=int(input("Valor de k: "))
cont=0
numerador=1
soma=1
while(cont<k):
	e=1+1/factorial(numerador)
	numerador=numerador+1
	cont=cont+1
print(round(e, 8))	
-- OUTPUT:
1.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:14:46) 
-- CODE:
from math import factorial
k=int(input("Valor de k: "))
cont=0
numerador=1
soma=1
while(cont<k):
	e=1+1/factorial(numerador)
	numerador=numerador+1
	cont=cont+1
print(round(e, 8))	
-- OUTPUT:
1.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:16:02) 
-- CODE:
from math import factorial
k=int(input("Valor de k: "))
cont=0
numerador=1
soma=1
while(cont<k):
	e=1+soma*1/factorial(numerador)
	numerador=numerador+1
	cont=cont+1
print(round(e, 8))	
-- OUTPUT:
1.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:16:14) 
-- CODE:
from math import factorial
k=int(input("Valor de k: "))
cont=0
numerador=1
soma=1
while(cont<k):
	e=soma*1/factorial(numerador)
	numerador=numerador+1
	cont=cont+1
print(round(e, 8))	
-- OUTPUT:
0.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:18:24) 
-- CODE:
from math import factorial
k=int(input("Valor de k: "))
cont=0
numerador=1
soma=k
while(cont<k):
	e=1+soma*1/factorial(numerador)
	numerador=numerador+1
	cont=cont+1
print(round(e, 8))	
-- OUTPUT:
1.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:19:24) 
-- CODE:
from math import factorial
k=int(input("Valor de k: "))
cont=0
numerador=1
soma=k
while(cont<k):
	e=(1+1/factorial(numerador))*soma
	numerador=numerador+1
	cont=cont+1
print(round(e, 8))	
-- OUTPUT:
7.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:29:18) 
-- CODE:
from math import factorial
k=int(input("Valor de k: "))
cont=0
numerador=1
result=1
while(cont<k):
	result=result+1/factorial(numerador)
	numerador=numerador+1
	cont=cont+1
print(round(result, 8))	
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:29:29) 
-- CODE:
from math import factorial
k=int(input("Valor de k: "))
cont=0
numerador=1
result=1
while(cont<k):
	result=result+1/factorial(numerador)
	numerador=numerador+1
	cont=cont+1
print(round(result, 8))	
-- EXECUTION TIME:
0.194999
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71825397
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71805556
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:29:38) 
-- CODE:
from math import factorial
k=int(input("Valor de k: "))
cont=0
numerador=1
result=1
while(cont<k):
	result=result+1/factorial(numerador)
	numerador=numerador+1
	cont=cont+1
print(round(result, 8))	
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:29:46) 
-- CODE:
from math import factorial
k=int(input("Valor de k: "))
cont=0
numerador=1
result=1
while(cont<k):
	result=result+1/factorial(numerador)
	numerador=numerador+1
	cont=cont+1
print(round(result, 8))	
-- EXECUTION TIME:
0.125308
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71825397
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71805556
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:30:12) 
-- CODE:
from math import factorial
k=int(input("Valor de k: "))
cont=0
numerador=1
result=1
while(cont<k):
	result=result+1/factorial(numerador)
	numerador=numerador+1
	cont=cont+1
print(round(result, 8))	
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:30:31) 
-- CODE:
from math import factorial
k=int(input("Valor de k: "))
cont=0
numerador=1
result=1
while(cont<k):
	result=result+1/factorial(numerador)
	numerador=numerador+1
	cont=cont+1
print(round(result, 8))	
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:31:41) 
-- CODE:
from math import factorial
k=int(input("Valor de k: "))
cont=0
numerador=1
result=1
while(cont<k):
	result=result*1/factorial(numerador)
	numerador=numerador+1
	cont=cont+1
print(round(result, 8))	
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:31:45) 
-- CODE:
from math import factorial
k=int(input("Valor de k: "))
cont=0
numerador=1
result=1
while(cont<k):
	result=result*1/factorial(numerador)
	numerador=numerador+1
	cont=cont+1
print(round(result, 8))	
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:32:00) 
-- CODE:
from math import factorial
k=int(input("Valor de k: "))
cont=0
numerador=1
result=1
while(cont<k):
	result=result+*1/factorial(numerador)
	numerador=numerador+1
	cont=cont+1
print(round(result, 8))	
-- ERROR:
File "XXXX", line 7
    result=result+*1/factorial(numerador)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:32:22) 
-- CODE:
from math import factorial
k=int(input("Valor de k: "))
cont=0
numerador=1
result=1
while(cont<k):
	result=result+1*1/factorial(numerador)
	numerador=numerador+1
	cont=cont+1
print(round(result, 8))	
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:32:26) 
-- CODE:
from math import factorial
k=int(input("Valor de k: "))
cont=0
numerador=1
result=1
while(cont<k):
	result=result+1*1/factorial(numerador)
	numerador=numerador+1
	cont=cont+1
print(round(result, 8))	
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:32:41) 
-- CODE:
from math import factorial
k=int(input("Valor de k: "))
cont=0
numerador=1
result=1
while(cont<k):
	result=result+1*1/factorial(numerador)
	numerador=numerador+1
	cont=cont+1
print(round(result, 8))	
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:33:36) 
-- CODE:
from math import factorial
k=int(input("Valor de k: "))
cont=0
numerador=1
result=1
while(cont<k):
	result=result*1/factorial(numerador)
	numerador=numerador+1
	cont=cont+1
result=result+1	
print(round(result, 8))	
-- OUTPUT:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:33:53) 
-- CODE:
from math import factorial
k=int(input("Valor de k: "))
cont=0
numerador=1
result=1
while(cont<k):
	result=result*1/factorial(numerador)
	numerador=numerador+1
	cont=cont+1

print(round(result, 8))	
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:34:10) 
-- CODE:
from math import factorial
k=int(input("Valor de k: "))
cont=0
numerador=1
result=1
while(cont<k):
	result=result*1/factorial(numerador)
	numerador=numerador+1
	cont=cont+1

print(round(result, 8))	
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:34:17) 
-- CODE:
from math import factorial
k=int(input("Valor de k: "))
cont=0
numerador=1
result=1
while(cont<k):
	result=result*1/factorial(numerador)
	numerador=numerador+1
	cont=cont+1

print(round(result, 8))	
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:34:19) 
-- CODE:
from math import factorial
k=int(input("Valor de k: "))
cont=0
numerador=1
result=1
while(cont<k):
	result=result*1/factorial(numerador)
	numerador=numerador+1
	cont=cont+1

print(round(result, 8))	
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:35:01) 
-- CODE:
from math import factorial
k=int(input("Valor de k: "))
cont=0
numerador=1
result=1
sinal=1
while(cont<k):
	result=result+sinal*1/factorial(numerador)
	numerador=numerador+1
	cont=cont+1

print(round(result, 8))	
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:35:06) 
-- CODE:
from math import factorial
k=int(input("Valor de k: "))
cont=0
numerador=1
result=1
sinal=1
while(cont<k):
	result=result+sinal*1/factorial(numerador)
	numerador=numerador+1
	cont=cont+1

print(round(result, 8))	
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:35:10) 
-- CODE:
from math import factorial
k=int(input("Valor de k: "))
cont=0
numerador=1
result=1
sinal=1
while(cont<k):
	result=result+sinal*1/factorial(numerador)
	numerador=numerador+1
	cont=cont+1

print(round(result, 8))	
-- EXECUTION TIME:
0.16114
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71825397
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71805556
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:49:46) 
-- CODE:
from math import factorial
k=int(input("Valor de k: "))
cont=0
numerador=1
result=1
sinal=1
while(cont<k):
	result=result+(1/factorial(numerador))
	numerador=numerador+1
	cont=cont+1

print(round(result, 8))	
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:49:56) 
-- CODE:
from math import factorial
k=int(input("Valor de k: "))
cont=0
numerador=1
result=1
sinal=1
while(cont<k):
	result=result+(1/factorial(numerador))
	numerador=numerador+1
	cont=cont+1

print(round(result, 8))	
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:50:28) 
-- CODE:
from math import factorial
k=int(input("Valor de k: "))
cont=0
numerador=1
result=1
sinal=1
while(cont<k):
	result=result+(1/factorial(numerador))
	numerador=numerador+1
	cont=cont+1

print(round(result, 8))	
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:26:15) 
-- CODE:
from math import factorial
k=int(input("Valor de k: "))
cont=0
numerador=1
result=1

while(cont<k):
	result=result+(1/factorial(numerador))
	numerador=numerador+1
	cont=cont+1

print(round(result, 8))	
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:26:23) 
-- CODE:
from math import factorial
k=int(input("Valor de k: "))
cont=0
numerador=1
result=1

while(cont<k):
	result=result+(1/factorial(numerador))
	numerador=numerador+1
	cont=cont+1

print(round(result, 8))	
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:26:29) 
-- CODE:
from math import factorial
k=int(input("Valor de k: "))
cont=0
numerador=1
result=1

while(cont<k):
	result=result+(1/factorial(numerador))
	numerador=numerador+1
	cont=cont+1

print(round(result, 8))	
-- EXECUTION TIME:
0.193486
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71825397
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71805556
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:17:23) 
-- CODE:
from math import factorial
k=int(input("Valor de k: "))
cont=0
numerador=0
result=0

while(cont<k):
	result=result+(1/factorial(numerador))
	numerador=numerador+1
	cont=cont+1

print(round(result, 8))	
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:17:52) 
-- CODE:
from math import factorial
k=int(input("Valor de k: "))
cont=0
numerador=0
result=0

while(cont<k):
	result=result+(1/factorial(numerador))
	numerador=numerador+1
	cont=cont+1

print(round(result, 8))	
-- EXECUTION TIME:
0.154555
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
